[package]
name        = "cryptor"
version     = "0.1.3"
authors     = ["atsushi130 <atsushi_main@outlook.jp>"]
license     = "MIT/Apache-2.0"
description = "Cryptor is encryption machine corresponding to the diversity of algorithms."
readme      = "README.md"
repository  = "https://github.com/atsushi130/Cryptor"
keywords    = ["enigma", "cipher", "encrypt", "decrypt", "base64"]

[badges]
travis-ci = { repository = "atsushi130/Cryptor" }

[dependencies]
lazy_static = "0.2.8"
base64      = "~0.5.0"

[lib]
name = "cryptor"
path = "./src/lib.rs"
